--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    <h3>hello react</h3>
+    <h3>hi react</h3>
+    <div>
+        <img src="https://www.kopo.ac.kr/intro/2023/img2/intro_img01_20240119.png" 
+        alt="이미지파일">
+    </div>
+
     <div>
         <img src="https://www.kopo.ac.kr/intro/2023/img2/intro_img01_20240119.png" 
         alt="이미지파일">
